--- a/sales.html
+++ b/sales.html
@@ -9,13 +9,13 @@
     <header>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a>></li>
+          <li><a href="index.html">Home</a></li>
         </ul>
       </nav>
     </header>
 
     <main>
-      <img src="assets/salmon.png">
+      <div id="store-container"></ul>
     </main>
 
     <script src="js/app.js"></script>
