data displays for all stores

--- a/sales.html
+++ b/sales.html
@@ -15,7 +15,8 @@
     </header>
 
     <main>
-      <div id="store-container"></ul>
+      <div id="store-container"></div>
+      <img src="./assets/salmon.png">
     </main>
 
     <script src="js/app.js"></script>
