--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
   <head>
     <title>Pat's Salmon Shoppe</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Delius+Unicase|Dosis&display=swap" rel="stylesheet">
   </head>
 
   <body>
     <header>
       <nav>
         <ul>
+          <li><a href="#">About Us</a></li>
           <li><a href="sales.html">Sales Information</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </nav>
     </header>
