--- a/sales.html
+++ b/sales.html
@@ -2,14 +2,18 @@
 
 <html>
   <head>
-
+    <title>Sales Information</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Delius+Unicase|Dosis&display=swap" rel="stylesheet">
   </head>
 
   <body>
     <header>
       <nav>
         <ul>
+          <li><a href="#">About Us</a></li>
           <li><a href="index.html">Home</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </nav>
     </header>
