header row works

--- a/sales.html
+++ b/sales.html
@@ -19,7 +19,7 @@
     </header>
 
     <main>
-      <div id="store-container"></div>
+      <table id="store-table"></table>
       <img src="./assets/salmon.png">
     </main>
 
