--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <header>
+    <!-- <header>
       <nav>
         <ul>
           <li><a href="#">About Us</a></li>
@@ -16,10 +16,20 @@
           <li><a href="#">Contact</a></li>
         </ul>
       </nav>
-    </header>
+    </header> -->
 
+    <section class="intro">
+      <div class="inner">
+        <div class="content">
+          <h1>Pat's Salmon Cookies</h1>
+          <a class="btn" href="#">About Us</a>
+          <a class="btn" href="sales.html">Sales</a>
+          <a class="btn" href="#">Contact</a>
+        </div>
+      </div>
+    </section>
+    <p>Pacific cod eelblenny sea snail swamp-eel dragonfish Moses sole bream cutlassfish, codlet. Freshwater shark swampfish Black sea bass, channel bass mola razorfish; crocodile icefish whale shark oldwife. Pompano dolphinfish emperor angelfish stargazer round stingray. River loach marlin scat Hammerjaw sprat Moses sole tonguefish spiny dogfish Mexican golden trout. Longnose dace, black bass--driftfish ghoul giant sea bass shortnose sucker, livebearer northern pearleye whalefish silver dollar. Jack Atlantic trout viperfish tripletail rough pomfret bull trout surgeonfish dragonfish sheepshead.</p>
     <main>
-      <h1>Pat's Salmon Shoppe</h1>
     </main>
   </body>
 </html>
