add styles to sales

--- a/sales.html
+++ b/sales.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>Sales Information</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/salesStyle.css">
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Delius+Unicase|Dosis&display=swap" rel="stylesheet">
   </head>
 
@@ -19,6 +19,7 @@
     </header>
 
     <main>
+      <h2>Sales Information</h2>
       <table id="store-table"></table>
       <img src="./assets/salmon.png">
     </main>
