--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>Pat's Salmon Shoppe</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/indexStyle.css">
     <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Delius+Unicase|Dosis&display=swap" rel="stylesheet">
   </head>
 
