--- a/sales.html
+++ b/sales.html
@@ -18,11 +18,19 @@
       </nav>
     </header>
 
-    <main>
+    <section>
       <h2>Sales Information</h2>
       <table id="store-table"></table>
+    </section>
+    
+    <section>
+      <h2>Cookie Tossers</h2>
+      <table id="tossers-table"></table>
+    </section>
+    
+    <section>
       <img src="./assets/salmon.png">
-    </main>
+    </section>
 
     <script src="js/app.js"></script>
   </body>
