--- a/index.html
+++ b/index.html
@@ -8,28 +8,31 @@
   </head>
 
   <body>
-    <!-- <header>
-      <nav>
-        <ul>
-          <li><a href="#">About Us</a></li>
-          <li><a href="sales.html">Sales Information</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
-    </header> -->
-
     <section class="intro">
       <div class="inner">
         <div class="content">
           <h1>Pat's Salmon Cookies</h1>
-          <a class="btn" href="#">About Us</a>
+          <a class="btn" href="#about">About Us</a>
           <a class="btn" href="sales.html">Sales</a>
-          <a class="btn" href="#">Contact</a>
+          <a class="btn" href="#product">Product</a>
         </div>
       </div>
     </section>
-    <p>Pacific cod eelblenny sea snail swamp-eel dragonfish Moses sole bream cutlassfish, codlet. Freshwater shark swampfish Black sea bass, channel bass mola razorfish; crocodile icefish whale shark oldwife. Pompano dolphinfish emperor angelfish stargazer round stingray. River loach marlin scat Hammerjaw sprat Moses sole tonguefish spiny dogfish Mexican golden trout. Longnose dace, black bass--driftfish ghoul giant sea bass shortnose sucker, livebearer northern pearleye whalefish silver dollar. Jack Atlantic trout viperfish tripletail rough pomfret bull trout surgeonfish dragonfish sheepshead.</p>
     <main>
+      <article id="about">
+        <img src="assets/cutter.jpeg">
+        <section>
+          <h1>About Us</h1>
+          <div>
+            <p>Pacific cod eelblenny sea snail swamp-eel dragonfish Moses sole bream cutlassfish, codlet. Freshwater shark swampfish Black sea bass, channel bass mola razorfish; crocodile icefish whale shark oldwife. Pompano dolphinfish emperor angelfish stargazer round stingray. River loach marlin scat Hammerjaw sprat Moses sole tonguefish spiny dogfish Mexican golden trout. Longnose dace, black bass--driftfish ghoul giant sea bass shortnose sucker, livebearer northern pearleye whalefish silver dollar. Jack Atlantic trout viperfish tripletail rough pomfret bull trout surgeonfish dragonfish sheepshead. Pacific cod eelblenny sea snail swamp-eel dragonfish Moses sole bream cutlassfish, codlet. Freshwater shark swampfish Black sea bass, channel bass mola razorfish; crocodile icefish whale shark oldwife. Pompano dolphinfish emperor angelfish stargazer round stingray. River loach marlin scat Hammerjaw sprat Moses sole tonguefish spiny dogfish Mexican golden trout. Longnose dace, black bass--driftfish ghoul giant sea bass shortnose sucker, livebearer northern pearleye whalefish silver dollar. Jack Atlantic trout viperfish tripletail rough pomfret bull trout surgeonfish dragonfish sheepshead.</p>
+          </div>
+        </section>
+      </article>
+
+      <article id="product">
+      
+      </article>
     </main>
   </body>
+  <footer></footer>
 </html>
