--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <section class="intro">
       <div class="inner">
         <div class="content">
+          <img src="assets/salmon.png">
           <h1>Pat's Salmon Cookies</h1>
           <a class="btn" href="#about">About Us</a>
           <a class="btn" href="sales.html">Sales</a>
@@ -29,10 +30,22 @@
         </section>
       </article>
 
-      <article id="product">
-      
+      <article>
+        <div id="product">
+          <h1>Product</h1>
+          <ul>
+            <li><img src="assets/frosted-cookie.jpg"></li>
+            <li><img src="assets/fish.jpg"></li>
+            <li><img src="assets/shirt.jpg"></li>
+          </ul>
+        </div>
+      </article>
+
+      <article id="visit">
+        <h1>Cookies loved by all!</h1>
+        <img src="assets/family.jpg">
       </article>
     </main>
+    <footer></footer>
   </body>
-  <footer></footer>
 </html>
