--- a/sales.html
+++ b/sales.html
@@ -14,6 +14,7 @@
           <li><a href="#">About Us</a></li>
           <li><a href="index.html">Home</a></li>
           <li><a href="#">Contact</a></li>
+          <li><img src="./assets/chinook.jpg"></li>
         </ul>
       </nav>
     </header>
@@ -44,10 +45,6 @@
     <section>
       <h2>Cookie Tossers</h2>
       <table id="tossers-table"></table>
-    </section>
-    
-    <section>
-      <img src="./assets/salmon.png">
     </section>
 
     <script src="js/app.js"></script>
