--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <section class="intro">
       <div class="inner">
         <div class="content">
-          <img src="assets/salmon.png">
           <h1>Pat's Salmon Cookies</h1>
           <a class="btn" href="#about">About Us</a>
           <a class="btn" href="sales.html">Sales</a>
@@ -46,6 +45,6 @@
         <img src="assets/family.jpg">
       </article>
     </main>
-    <footer></footer>
+    <footer><img src="assets/salmon.png"></footer>
   </body>
 </html>
