--- a/sales.html
+++ b/sales.html
@@ -11,9 +11,7 @@
     <header>
       <nav>
         <ul>
-          <li><a href="#">About Us</a></li>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#">Contact</a></li>
           <li><img src="./assets/chinook.jpg"></li>
         </ul>
       </nav>
@@ -25,7 +23,7 @@
         <input name="storeName" type="text">
 
         <label for="minCust">Minimum Customer</label>
-        <input name="minCust" type="number" min="0">
+        <input name="minCust" type="number" min="0"><br>
 
         <label for="maxCust">Maxium Customer</label>
         <input name="maxCust" type="number" min="0">
